Add main changes to the site

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <script src="https://kit.fontawesome.com/9488bd3455.js" crossorigin="anonymous"></script>
     <!--Google Font-->
     <!--Favicon-->
-    <link rel="icon" type="image/png" href="assets/images/logo2.png"/>
-    <title>HP2G</title>
+    <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+    <title>HP2g</title>
 </head>
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font" id="home">
-        <img src="assets/images/logo2.png" alt="logo for the company" width="50">
-        <a class="navbar-brand ml-3 mt-3" href="#home">
-            <h2>HP2G Ltd</h2>
-            <p>Commercial Plumbing, Heating and Gas Engineers</p>
+        <img src="assets/images/logo.png" alt="logo for the company" width="30">
+        <a class="navbar-brand ml-3" href="#home">
+            <h1 id="header-title">HP<sub id="red-subscript" class="subsize">2</sub>g Ltd</h1>
+            <h6>Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</h6>
         </a>
         <div class="navbar-toggle large-toggle">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,12 +49,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 header-nav pt-3 pb-3 pl-4 font">
-                <button>GET A QUOTE</button>
+                <button>Contact Us</button>
             </div>
             <div class="col-6 header-nav pt-3 font header-right big-contact">
                 <p class="text-light">
-                    <i class="fa-solid fa-envelope"></i> joebatten@hp2g.com
-                    <i class="fa-solid fa-phone pl-3"></i> +447563 672632
+                    <i class="fa-solid fa-envelope"></i> info@hp2g.co.uk
+                    <i class="fa-solid fa-phone pl-3"></i> 01234 376855
                 </p>
             </div>
             <div class="col-6 pt-2 small-contact">
@@ -72,58 +72,59 @@
     </div>
     <div class="container-fluid" id="who">
         <div class="row">
-            <div class="col-12 strip mt-2 mb-2"></div>
+            <div class="col-12 strip"></div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-4 large-images">
                 <div class="row">
-                    <div class="col-6 user-image-one"></div>
-                    <div class="col-6 user-image-two"></div>
+                    <div class="col-12 user-image-one"></div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-8">
+            <div class="col-sm-12 col-md-8 display-right">
                 <h3 class="display-right pr-3 mt-2 font">Who We Are</h3>
-                <p class="font display-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
-                    Maecenas faucibus in lorem sit amet ultricies. Curabitur id diam metus. Ut posuere odio nunc,
-                    in pharetra magna pharetra non. Praesent non bibendum tortor, vitae vulputate justo.
-                    Nunc vel turpis ac tortor malesuada vulputate a sed nibh. Praesent metus elit, fringilla
-                    rhoncus aliquam ut, pulvinar et tortor. Pellentesque condimentum quam at nisi tempus laoreet.
+                <p class="font display-right">HP2g Ltd is a mechanical engineering company specialising in commercial heating, plumbing and gas systems, we are, primarily, a maintenance company specialising in supporting schools, factories, and healthcare establishments.<br/>
+                    <br/>Formed in 2008 by two engineers who had worked together for a number of years previously, they both felt that a bespoke service was required for their clients who needed, or would benefit from, a one stop shop for gas appliance servicing and reactive call outs for heating, plumbing and gas issues.<br/>
+                    <br/>We are gas safe registered and fully qualified to work on a range of gas appliances and can carry out gas testing and fault finding on large installations that use both natural and liquid petroleum gas. 
                 </p>
-            </div>
-            <div class="col-12 small-images">
-                <div class="row">
-                    <div class="col-12 strip mt-2 mb-2"></div>
-                    <div class="col-4 user-image-one"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4 user-image-two"></div>
-                </div>
+                <button class="more font"><b>Contact Us <i class="fa-solid fa-arrow-right"></i></b></button>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 strip mt-2 mb-2"></div>
+            <div class="col-12 strip"></div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-8">
                 <h3 class="pr-3 mt-2 font">What We Do</h3>
-                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
-                    Maecenas faucibus in lorem sit amet ultricies. Curabitur id diam metus. Ut posuere odio nunc,
-                    in pharetra magna pharetra non. Praesent non bibendum tortor, vitae vulputate justo.
-                    Nunc vel turpis ac tortor malesuada vulputate a sed nibh. Praesent metus elit, fringilla
-                    rhoncus aliquam ut, pulvinar et tortor. Pellentesque condimentum quam at nisi tempus laoreet.
+                <p class="font">Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.<br/>
+                <br/>All our clients have plumbing and hot water systems, we monitor the functionality of our clients’ systems to ensure that they are functioning correctly this might include checking TMV3 blender valves used to blend hot water temperatures down to a safe level for handwashing purposes also ensuring that cold water is being stored correctly and that the temperatures are correct as the water issues from the tap.
                 </p>
+                <div class="row">
+                    <div class="col-6 pl-5 pt-2 pb-0">
+                        <img src="assets/images/safecontractor.png" width="60" class="pr-2">
+                        <img src="assets/images/gassafe.png" width="90" class="pr-2">
+                        <img src="assets/images/wras.jpg" width="80">
+                        <img src="assets/images/dbs.jpg" width="80">
+                    </div>
+                    <div class="col-6 font display-right pt-3">
+                        <button class="more"><b>Learn More <i class="fa-solid fa-arrow-right"></i></b></button>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-12 col-md-4 boiler-image"></div>
+            <div class="col-sm-12 col-md-4 images">
+                <img class="whoimages" src="assets/images/boiler1.jpeg" width="50%">
+                <img class="whoimages" src="assets/images/boiler2.jpeg" width="50%">
+            </div>
         </div>
     </div>
     <div class="container-fluid" id="services">
         <div class="row">
-            <div class="col-12 strip mt-2 mb-2"></div>
+            <div class="col-12 strip"></div>
         </div>
     </div>
     <div class="container-fluid">
@@ -132,27 +133,59 @@
                 <h3 class="font">Our Services</h3>
             </div>
             <div class="col-4" id="service-one">
-                <h3 class="service">Service One</h3>
-                <div id="service-one-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
-                        ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
-                        ex dolor interdum lorem. Lorem ipsum dolor sit amet.</p>
+                <h4 class="service">Gas Appliance Servicing & Inspection</h4>
+                <div class="pl-2" id="service-one-text">
+                    <li>Annual inspection and written reporting</li>
+                    <li>Report on condition</li>
+                    <li>Proactive suggestions for the promotion of energy efficiency</li>
                 </div>
             </div>
             <div class="col-4" id="service-two">
-                <h3 class="service">Service Two</h3>
-                <div id="service-two-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
-                        ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
-                        ex dolor interdum lorem. Lorem ipsum dolor sit amet.</p>
+                <h4 class="service">Statutory Testing</h4>
+                <div class="pl-2" id="service-two-text">
+                    <li>Gas fired boilers</li>
+                    <li>Gas fired water heaters</li>
+                    <li>Unvented hot water heaters</li>
+                    <li>Pressurisation units</li>
+                    <li>Water systems</li>
+                    <li>TMV3 blender valves</li>
                 </div>
             </div>
             <div class="col-4" id="service-three">
-                <h3 class="service">Service Three</h3>
-                <div id="service-three-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
-                        ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
-                        ex dolor interdum lorem. Lorem ipsum dolor sit amet.</p>
+                <h4 class="service">Heating Systems</h4>
+                <div class="pl-2" id="service-three-text">
+                    <li>Reactive call outs</li>
+                    <li>Fault finding</li>
+                    <li>System extensions</li>
+                    <li>System design</li>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4" id="service-four">
+                <h4 class="service">Plumbing Sytems</h4>
+                <div class="pl-2" id="service-four-text">
+                    <li>Reactive call outs</li>
+                    <li>Fault finding</li>
+                    <li>Installation</li>
+                    <li>Extension</li>
+                </div>
+            </div>
+            <div class="col-4" id="service-five">
+                <h4 class="service">Reactive Call-Outs</h4>
+                <div class="pl-2" id="service-five-text">
+                    <li>Gas escape</li>
+                    <li>Boiler faults</li>
+                    <li>Plumbing faults</li>
+                    <li>Heating faults</li>
+                </div>
+            </div>
+            <div class="col-4" id="service-six">
+                <h4 class="service">Survey</h4>
+                <div class="pl-2" id="service-six-text">
+                    <li>Heating systems</li>
+                    <li>Plumbing systems</li>
+                    <li>Gas pipework and systems</li>
                 </div>
             </div>
         </div>
@@ -171,40 +204,40 @@
                 <img src="assets/images/review-logo.jpg" alt="Image of school logo">
             </div>
             <div class="col-sm-10 col-md-4">
-                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
-                    ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
-                    ex dolor interdum lorem.
+                <p class="font">Our school is more than 60 years old and needs expert care and attention, most companies wouldn’t come within a mile if it but HP2g have the knowhow and knowledge to just get things done, we really wouldn’t like to be without them!.<br/>
+                    <br/>Dave Moore
+                    <br/>Premises Manager
                 </p>
                 <p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
                 </p>
             </div>
             <div class="col-sm-10 col-md-4 display-right border-review small-review">
-                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
-                    ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
-                    ex dolor interdum lorem.
+                <p class="font">We have used HP2g for more than 10 years for all our heating, plumbing and gas services here in Huntingdon, they really can’t do enough and always go the extra mile, nothing is too much trouble.<br/>
+                    <br/>Simon Law
+                    <br/>Operations Manager
                 </p>
                 <p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
+                    <i class="fa-solid fa-star gold"></i>
                 </p>
             </div>
             <div class="col-2 school-logo display-right small-review">
-                <img src="assets/images/review.jpeg" alt="Image of school logo">
+                <img src="assets/images/bblogo.png" alt="Image of school logo">
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row mt-2 mb-2">
             <div class="col-12 font footer-quote">
-                <button>GET A QUOTE</button>
+                <button>Contact Us</button>
             </div>
         </div>
     </div>
@@ -212,14 +245,17 @@
         <div class="row footer-background">          
             <div class="col-sm-4 col-md-3 contact-footer">
               <p class="mt-3 text-light delivery-text font">Contact Us:</p>
-              <p class="footer-text font">HP2G 2A Finsbury Road, Banbury<br/>BH23 6AH</p>
+              <p class="footer-text font">Walnut Tree Cottage<br/>Colmworth Road<br/>Little Staughton<br/>Bedfordshire<br/>MK44 2BX</p>
             </div>
             <div class="col-sm-4 col-md-3 small-none">
                 <p class="mt-3 text-light font">Information</p>
                 <ul class="mt-3 footer-list">
-                    <li><a class="footer-text" href="#">Service One</a></li>
-                    <li><a class="footer-text" href="#">Service Two</a></li>
-                    <li><a class="footer-text" href="#">Service Three</a></li>
+                    <li><a class="footer-text" href="#">Gas Appliance Servicing & Inspection</a></li>
+                    <li><a class="footer-text" href="#">Statutory Testing</a></li>
+                    <li><a class="footer-text" href="#">Heating Systems</a></li>
+                    <li><a class="footer-text" href="#">Plumbing Systems</a></li>
+                    <li><a class="footer-text" href="#">Reactive Call-Outs</a></li>
+                    <li><a class="footer-text" href="#">Survey</a></li>
                 </ul>
             </div>
             <div class="col-sm-4 col-md-3 small-none">
@@ -245,9 +281,9 @@
                 </ul>
                 <div class="row">
                     <div class="col-12">
-                        <img src="assets/images/gas-logo-two.png" width="50" class="pr-2">
-                        <img src="assets/images/gas-logo-one.jpg" width="50" class="pr-2">
-                        <img src="assets/images/gas-logo-three.jpg" width="50">
+                        <img src="assets/images/safecontractor.png" width="60" class="pr-2">
+                        <img src="assets/images/gassafe.png" width="90" class="pr-2">
+                        <img src="assets/images/wras.jpg" width="80">
                     </div>
                 </div>
             </div>
