Added about page

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <button>Contact Us</button>
             </div>
             <div class="col-6 header-nav pt-3 font header-right big-contact">
-                <p class="text-light">
-                    <i class="fa-solid fa-envelope"></i> info@hp2g.co.uk
+                <p class="text-light" id="email">
+                    <a href="mailto:info@hp2g.co.uk" class="text-light"><i class="fa-solid fa-envelope"></i> info@hp2g.co.uk</a>
                     <i class="fa-solid fa-phone pl-3"></i> 01234 376855
                 </p>
             </div>
@@ -97,6 +97,36 @@
             <div class="col-12 strip"></div>
         </div>
     </div>
+    <div class="carousel">
+        <div class="carousel__item font text-center">
+            <p>"HP<sub>2</sub>G have the knowhow and knowledge to just get things done, we really don't know where we would be without them!"<br/>
+                <span class="names">Dave Moore (Premises Officer) - Longsands Academy</span><br/>
+                <span class="stars"><i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                </span>
+                </p>
+        </div>
+        <div class="carousel__item font text-center">
+            <p>"HP<sub>2</sub>G always go the extra mile, nothing is too much trouble."<br/>
+            <span class="names">Simon Law (Operations Manager) - Bensons for Beds</span><br/>
+            <span class="stars"><i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            </span>
+            </p>
+        </div>
+        <div class="carousel__item font">Content 3</div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 strip"></div>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-8">
@@ -112,7 +142,7 @@
                         <img src="assets/images/dbs.jpg" width="80">
                     </div>
                     <div class="col-6 font display-right pt-3">
-                        <button class="more"><b>Learn More <i class="fa-solid fa-arrow-right"></i></b></button>
+                        <a href="about.html" class="more"><b>Learn More <i class="fa-solid fa-arrow-right"></i></b></a>
                     </div>
                 </div>
             </div>
@@ -130,34 +160,35 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 center-text">
-                <h3 class="font">Our Services</h3>
+                <h3 class="font pt-3 pb-2">Our Services</h3>
+                <p class="text-center">We offer a variety of different services, for more information on these services please contact us.</p>
             </div>
             <div class="col-4" id="service-one">
                 <h4 class="service">Gas Appliance Servicing & Inspection</h4>
                 <div class="pl-2" id="service-one-text">
-                    <li>Annual inspection and written reporting</li>
-                    <li>Report on condition</li>
-                    <li>Proactive suggestions for the promotion of energy efficiency</li>
+                    <li>Annual Inspection and Written Weporting</li>
+                    <li>Report on Condition</li>
+                    <li>Proactive Suggestions to Promote Energy Efficiency</li>
                 </div>
             </div>
             <div class="col-4" id="service-two">
                 <h4 class="service">Statutory Testing</h4>
                 <div class="pl-2" id="service-two-text">
-                    <li>Gas fired boilers</li>
-                    <li>Gas fired water heaters</li>
-                    <li>Unvented hot water heaters</li>
-                    <li>Pressurisation units</li>
-                    <li>Water systems</li>
-                    <li>TMV3 blender valves</li>
+                    <li>Gas Fired Boilers</li>
+                    <li>Gas Fired Water Heaters</li>
+                    <li>Unvented Hot Water Heaters</li>
+                    <li>Pressurisation Units</li>
+                    <li>Water Systems</li>
+                    <li>TMV3 Blender Valves</li>
                 </div>
             </div>
             <div class="col-4" id="service-three">
                 <h4 class="service">Heating Systems</h4>
                 <div class="pl-2" id="service-three-text">
-                    <li>Reactive call outs</li>
-                    <li>Fault finding</li>
-                    <li>System extensions</li>
-                    <li>System design</li>
+                    <li>Reactive Callouts</li>
+                    <li>Fault Finding</li>
+                    <li>System Extensions</li>
+                    <li>System Design</li>
                 </div>
             </div>
         </div>
@@ -165,8 +196,8 @@
             <div class="col-4" id="service-four">
                 <h4 class="service">Plumbing Sytems</h4>
                 <div class="pl-2" id="service-four-text">
-                    <li>Reactive call outs</li>
-                    <li>Fault finding</li>
+                    <li>Reactive Callouts</li>
+                    <li>Fault Finding</li>
                     <li>Installation</li>
                     <li>Extension</li>
                 </div>
@@ -174,18 +205,18 @@
             <div class="col-4" id="service-five">
                 <h4 class="service">Reactive Call-Outs</h4>
                 <div class="pl-2" id="service-five-text">
-                    <li>Gas escape</li>
-                    <li>Boiler faults</li>
-                    <li>Plumbing faults</li>
-                    <li>Heating faults</li>
+                    <li>Gas Escape</li>
+                    <li>Boiler Faults</li>
+                    <li>Plumbing Faults</li>
+                    <li>Heating Faults</li>
                 </div>
             </div>
             <div class="col-4" id="service-six">
                 <h4 class="service">Survey</h4>
                 <div class="pl-2" id="service-six-text">
-                    <li>Heating systems</li>
-                    <li>Plumbing systems</li>
-                    <li>Gas pipework and systems</li>
+                    <li>Heating Systems</li>
+                    <li>Plumbing Systems</li>
+                    <li>Gas Pipework and Systems</li>
                 </div>
             </div>
         </div>
@@ -204,7 +235,7 @@
                 <img src="assets/images/review-logo.jpg" alt="Image of school logo">
             </div>
             <div class="col-sm-10 col-md-4">
-                <p class="font">Our school is more than 60 years old and needs expert care and attention, most companies wouldn’t come within a mile if it but HP2g have the knowhow and knowledge to just get things done, we really wouldn’t like to be without them!.<br/>
+                <p class="font">Our school is more than 60 years old and needs expert care and attention, most companies wouldn’t come within a mile of it but HP2g have the knowhow and knowledge to just get things done, we really don't know where we would be without them!<br/>
                     <br/>Dave Moore
                     <br/>Premises Manager
                 </p>
@@ -272,15 +303,13 @@
                 <ul class="mt-3 footer-list icons">
                     <li><a href="#" target="_blank" rel="noopener"
                       aria-label="Click here to go to our facebook page"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener"
-                      aria-label="Click here to go to our twitter page"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener"
-                      aria-label="Click here to go to our instagram page"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/hp2gltd" target="_blank" rel="noopener"
+                      aria-label="Click here to go to our linkedin page"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href="#" target="_blank" rel="noopener"
                       aria-label="Click here to go to our youtube page"><i class="fab fa-youtube"></i></a></li>
                 </ul>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 mt-5">
                         <img src="assets/images/safecontractor.png" width="60" class="pr-2">
                         <img src="assets/images/gassafe.png" width="90" class="pr-2">
                         <img src="assets/images/wras.jpg" width="80">
