Back to the top button has been added

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font" id="home">
         <img src="assets/images/logo.png" alt="logo for the company" width="30">
-        <a class="navbar-brand ml-3" href="#home">
+        <a class="navbar-brand ml-3" href="index.html">
             <h1 id="header-title">HP<sub id="red-subscript" class="subsize">2</sub>g Ltd</h1>
             <h6>Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</h6>
         </a>
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#who">About Us</a>
@@ -67,15 +67,80 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row header-image">
+        <div class="row header-image-2">
         </div>
     </div>
     <div class="container-fluid">
-    <div class="row mt-2 mb-2">
-        <div class="col-12 font footer-quote">
-            <button>Contact Us</button>
+        <div class="row">
+            <div class="col-12 strip"></div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-8">
+                <h3 class="pr-3 mt-2 font">What We Do</h3>
+                <p>Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.</p>
+                <p>All our clients have plumbing and hot water systems, we monitor the functionality of our clients’ systems to ensure that they are functioning correctly this might include checking TMV3 blender valves used to blend hot water temperatures down to a safe level for handwashing purposes also ensuring that cold water is being stored correctly and that the temperatures are correct as the water issues from the tap.</p>
+                <p>Commercial gas testing is a specialist field, not many engineers have the qualifications required to work on the largest gas installations, but our engineers do, we’re able to investigate any gas issue to any size which some of our clients find very useful as each year we can carry out a full gas tightness test of the whole site or investigate suspected gas leaks without the need to subcontract work to unknown contractors.</p>
+            </div>
+            <div class="col-4 center-video mt-4">
+                <video width="300" height="400" controls>
+                    <source src="assets/images/video1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 strip"></div>
+        </div>
+    </div>
+    <div class="container-fluid">  
+        <div class="row mt-2">
+            <div class="col-4 center-video mt-4">
+                <video width="300" height="400" controls>
+                    <source src="assets/images/video2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="col-8 display-right">
+                <h3 class="pr-3 mt-2 font">A Tailored Bespoke Service</h3>
+                <p class="pt-2">We also carry out installation work which might include the fitting of replacement boilers, high level heaters, pumps and associated heating plant, water heaters, calorifiers, pipework and heat emitters such as radiators and fan convectors. </p>
+                <p>So, we offer a one stop, bespoke service to our clients for commercial gas appliance servicing, plumbing, heating, and gas issues along with a reactive call out service.  We develop a close working relationship with all our clients creating a deep understanding of the customers site over time to ensure that we’re able to locate and fix any issue quickly and efficiently.</p>
+                <p>As we work in education and healthcare establishments all of our engineers are enhanced DBS checked with many years’ experience working in such environments, we’re WRAS approved and are proud to be accredited with Safecontractor reassuring all of our clients that we have robust management systems in place to demonstrate that our paperwork is compliant with current legislation and that processes are in place to ensure health and safety is handled in the best way possible.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 strip"></div>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="carousel__item font text-center">
+            <p>"HP<sub>2</sub>G have the knowhow and knowledge to just get things done, we really don't know where we would be without them!"<br/>
+                <span class="names">Dave Moore (Premises Officer) - Longsands Academy</span><br/>
+                <span class="stars"><i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                <i class="fa-solid fa-star gold"></i>
+                </span>
+                </p>
+        </div>
+        <div class="carousel__item font text-center">
+            <p>"HP<sub>2</sub>G always go the extra mile, nothing is too much trouble."<br/>
+            <span class="names">Simon Law (Operations Manager) - Bensons for Beds</span><br/>
+            <span class="stars"><i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            <i class="fa-solid fa-star gold"></i>
+            </span>
+            </p>
+        </div>
+        <div class="carousel__item font">Content 3</div>
     </div>
     <div class="container-fluid">
     <div class="row footer-background">          
@@ -127,5 +192,5 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 <!--JavaScript Link-->
-<script src="assets/js/script.js"></script> 
+<script src="assets/js/about.js"></script> 
 </body>
