--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
           </ul>
         </div>
     </nav>
+    <!-- go to top button -->
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <a href="#top" class="go-to-top" aria-label="Click here to go to the top of the page">
+                <i class="fas fa-angle-double-up"></i>
+            </a>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 header-nav pt-3 pb-3 pl-4 font">
